@@ -415,6 +415,9 @@ class Boolean(GenericText):
             self.view.treeview.set_cursor(path)
         return True
 
+    def get_textual_value(self, record):
+        return str(super().get_textual_value(record))
+
 
 class URL(Char):
 
