@@ -1,3 +1,4 @@
+* Add interactive search on tree view
 * Unify PYSON string format
 
 Version 5.8.0 - 2020-11-02
